--- a/WebApplication/Views/Home/Accueil.cshtml
+++ b/WebApplication/Views/Home/Accueil.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model WebApplication.Models.AccueilViewModel
+@{
     ViewBag.Title = "Home Page";
 }
 
@@ -6,6 +7,15 @@
     <h1>ASP.NET</h1>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
     <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+</div>
+
+<div class="container text-center">
+    @foreach(var dto in Model.ListFormations)
+    {
+        <article>
+            @Html.ActionLink(dto.Formation.Nom, "DetailsFormation", "Formation", new { nomSeo = dto.Formation.NomSeo}, null)
+        </article>
+    }
 </div>
 
 <div class="row">
